fix part of layout UI probs in profile page

--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -280,7 +280,7 @@ html
                     {% else %}
                     p.date 未設定日期
                     {% endif %}
-                  #activity-detail
+                  #activity-detail.event-detail
                     {% if activity.detail %}
                     p.detail {{ activity.detail }}
                     {% else %}
@@ -361,7 +361,7 @@ html
                     {% else %}
                     p.date 未設定日期
                     {% endif %}
-                  #project-detail
+                  #project-detail.event-detail
                     {% if project.detail %}
                     p.detail {{ project.detail }}
                     {% else %}
@@ -423,7 +423,7 @@ html
                     {% else %}
                     p.date 未設定日期
                     {% endif %}
-                  #personal-detail
+                  #personal-detail.event-detail
                     {% if personal.detail %}
                     p.detail {{ personal.detail }}
                     {% else %}
