--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -113,7 +113,7 @@ footer
       flex-direction: column
       justify-content: space-start
       align-items: center
-      
+      height: 100%
       #user-img
         input
           display: none
@@ -456,7 +456,7 @@ footer
       align-items: flex-start
       
       a
-        margin-left: 0
+        margin: 0 0.2rem 0.5rem 0.2rem
       .friend-img
         width: 3.2rem
         height: 3.2rem
@@ -464,9 +464,9 @@ footer
         //height: 5rem
         border-radius: 50%
         border: #CCCCCC solid 0.1rem
-        margin-bottom: 0.5rem
+        //margin: 0 0.2rem 0.5rem 0.2rem
       .virtualimg
-        width: 3.2rem
+        width: 3.7rem
         height: 0
       .friend-info
         display: none
@@ -514,12 +514,10 @@ footer
         background-color: #FFE4DC
         
     #tab-navbar
-      input:hover
-        cursor: pointer
         
     #tab-navbar
       position: relative
-      top: -1.8rem
+      top: -2.2rem
       display: flex
       flex-direction: row
       align-items: flex-end
@@ -535,6 +533,9 @@ footer
       *:hover
         position: relative
         transform: scale(1.02)
+          
+      input
+        cursor: pointer
     
     .page-panel
       position: relative
@@ -563,34 +564,36 @@ footer
           flex-direction: column
           flex-wrap: nowrap
           align-items: center
-          max-width: 12rem
+          max-width: 12vw
           .card-img
-            width: 12rem
-            height: 12rem
+            width: 12vw
+            height: 12vw
+            min-width: 10rem
+            min-height: 10rem
             border: solid 2px
             border-color: #75E1C7
             border-radius: 1rem
             background-color: #FFE4DC
-            p
-              width: 12rem
+            #nopicalert
+              width: 12vw
               text-align: center
               font-size: 1.5rem
               color: #666666
-              line-height: 12rem
+              line-height: 12vw
           #project-date
             width: 6rem
             .date
               font-size: 0.85rem
               color: gray
               margin-top: 1.5rem
-          #project-detail
+          .event-detail
             width: 100%
             .detail
-              font-size: 1.1rem
-              line-height: 1.3rem
-              width: 100%
-              max-height: 10rem
-              overflow: scroll
+              font-size: 1rem
+              line-height: 1.2rem
+              width: 110%
+              //max-height: 10rem
+              //overflow: scroll
               margin-top: 1rem
           
       
@@ -601,8 +604,8 @@ footer
           flex-wrap: nowrap
           justify-content: flex-start
           align-items: flex-start
-          width: 50rem
-          height: 100%
+          width: 22vw
+          //height: 100%
 
           //background-color: yellow
           
@@ -616,23 +619,21 @@ footer
             a
               .cardinfott
                 font-size: 1.5rem
+                line-height: 1.55rem
                 width: 11rem
                 //max-width: 15rem
             .rate
               font-size: 0.8rem
-              line-height: 1.2rem
-              //margin-left: 0.5rem
-              //background-color: #75E1C7
               padding: 0 0.3rem
               border-radius: 1rem
-              border: solid 2px
+              border: solid 0.15rem
               border-color: #75E1C7
             .charname
               font-size: 0.8rem
-              line-height: 1.2rem
+              //line-height: 1.2rem
               //margin-left: 0.5rem
               background-color: #75E1C7
-              padding: 0.2rem 0.3rem
+              padding: 0.1rem 0.3rem
               border-radius: 1rem
             
           .comments
@@ -645,7 +646,9 @@ footer
             //background-image: linear-gradient(#EEEEEE, #FFFFFF)
             //border-radius: 1.5rem
             width: 100%
-            //height: 12rem
+            max-height: 20vw
+            margin-bottom: 1rem
+
             overflow: scroll
             overflow-x: hidden
             //overflow-scrolling: touch
@@ -696,12 +699,12 @@ footer
                 #participant-comment
                   font-size: 1rem
                   text-align: left
-                  width: 12rem
+                  width: 12vw
                   margin: 0.1rem 1.2rem 0 1rem
                   color: #333333
           .eventcomment-insert
-            //position: absolute
-            //bottom: 0
+            position: absolute
+            bottom: -1rem
             display: flex
             flex-direction: row;
             justify-content: space-evenly
@@ -1079,7 +1082,7 @@ footer
   z-index: 6
 
   
-@media only screen and (max-width: 1000px)
+@media only screen and (max-width: 1023px)
   #profilepanel
     width: 70vw
     #top-region
@@ -1087,14 +1090,28 @@ footer
         flex-direction: column
       #description-tag
         width: 100%
+    #bottom-region
+      flex-direction: column;
+      align-items: center;
     
 
 @media only screen and (max-width: 450px)
   
   #phoneerrormsg
     display: block
-  #intro
-    flex-direction: column
+  #profilepanel
+    width: 80vw
+    margin: 5vh
+    #top-region
+      #intro
+        flex-direction: column
+        #info
+          #user-img
+            width: 30vw
+            height: 30vw
+    #bottom-region
+      #left-pane
+        width: calc(100% - 2rem)
 
   *
     font-size: 80%
