modify some UI, and fix eventwindow comment duplicated prob

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -373,7 +373,8 @@ footer
   transform: translate(-50%, -50%)
   top: 50%
   left: 50%
-  width: 37%
+  width: 40%
+  min-width: 32rem
   padding: 5rem 2rem 1.5rem 2rem
   background-color: #F5FBFE
   border-radius: 3rem
@@ -452,12 +453,12 @@ footer
       margin: 0.3rem 0 0 9rem
       
     #event-detail
-      font-size: 1.2rem
+      font-size: 1.1rem
       line-height: 1.5rem
       min-height: 5rem
-      max-height: 12rem
+      max-height: 9rem
       margin: 2.2rem 0 0 1rem
-      width: 98%
+      width: 95%
       
       overflow: scroll
       overflow-x: hidden
@@ -550,7 +551,7 @@ footer
                 text-align: right
                 
             #eventmsgtext
-              font-size: 1.1rem
+              font-size: 0.9rem
               color: #595959
         
     #eventmsg-sender
