add color change when there's any unread notification

--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -272,6 +272,18 @@ body
     display: flex
     flex-direction: column
     align-items: stretch
+    
+    #email-pane
+      input#email
+        width: 65%
+      input[type=button]
+        height: 2rem
+        border-radius: 1vh
+        outline: none
+        border: none
+        padding: 1% 2%
+        font-size: 0.8rem
+        background-color: #3AEDC2
 
   .input-area
     border-radius: 2vh
