--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -167,8 +167,8 @@ a
       
     #event
       background-image: url('../file/scheduleicon.png')
-    #alert
-      background-image: url('../file/noticeicon.png')
+    // #alert
+    //   background-image: url('../file/noticeicon.png')
     #message
       background-image: url('../file/msgicon.png')
     #aboutus
