--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -1,6 +1,7 @@
 {% load sass_tags %}
 {% url 'about_us' as about_us_url %}
 {% url 'home' as home_url %}
+{% load static %}
 link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")  
 header
   #navbar
@@ -19,7 +20,11 @@ header
         a#feedback.button(href="https://forms.gle/jg1putGAWZntSeNPA" title="問題回報")
         #feedback-hover.hover 問題回報
       li
-        a#alert.button(title="通知")
+        {% if notice_unread %}
+        a#alert.button(title="通知" style="background-image: url({% static './file/noticeicon_red.png'%});")
+        {% else %}
+        a#alert.button(title="通知" style="background-image: url({% static './file/noticeicon.png'%});")
+        {% endif %}
         #notificationboard
           p#noticeheading 通知
           #notices
@@ -52,6 +57,39 @@ header
                   p 目前沒有通知喔～
             {% endfor %}
         #alert-hover.hover 通知
+        script.
+          $(document).ready(function(){
+            $("a#alert").on("click", function() {
+              if ($("a#alert").css('background-image') != "/static/file/noticeicon.png") {
+                console.log("notice read")
+                notice_read_handler(
+                  "{% url 'read_notification' %}",
+                  "{{ csrf_token}}",
+                )
+              }
+            });
+          })
+          function notice_read_handler(URL, CSRF) {
+            $.ajaxSetup({
+              data: {
+                csrfmiddlewaretoken: CSRF
+              }
+            });
+            $.ajax({
+              type: 'post',
+              url: URL,
+              data: {},
+              dataType: 'json',
+              success: function(data) {
+                if (data.status == 200) {
+                  console.log("all notices are read");
+                  $("#alert").css("background-image", "url(/static/file/noticeicon.png)");
+                } else {
+                  console.log(data.error_message);
+                }
+              }
+            })
+          }
       li 
         a#message.button(href="#" title="功能開發中")
         #message-hover.hover 訊息
