--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -5,12 +5,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap');
 
 \:root
-  --background-color: #FFFFFF
-  --background-color-card: #E8E8E8
-  --fontcolor-navbarbutton: #000000
-  --fontcolor-header: #000000
-  --fontcolor-text: #000000
-  --color-main: #FAAD95
+  --background-color: #FFF6ED
+  --background-color-navbar: #FFAD94
+  --background-color-input: #FFE4DC
+
+  --fontcolor-navbarbuttons: #000000
+  --fontcolor-main:  #000000
+  --fontcolor-second: #828282
+  
+
   --font-family-header: "Noto Sans TC", "Tahoma", "Arial"
   --font-style-header: normal
   --font-family-text: "Noto Sans TC", "Tahoma", "Arial"
@@ -32,7 +35,7 @@
   left: 0
   width: 100%
   height: 4vw
-  background-color: var(--color-main)
+  background-color: var(--background-color-navbar)
 
   /*UpLeft/UR/DR/DL
   z-index: 6
@@ -71,7 +74,7 @@ a
 
     /*top: 0px;
     line-height: 4vw
-    color: var(--fontcolor-header)
+    color: var(--fontcolor-navbarbuttons)
     margin-left: 3%
 
 /*button
@@ -85,7 +88,7 @@ a
       border: none
       outline: none
       margin-top: 0.75rem
-      background-color: #FFCFBF
+      background-color: var(--background-color-input)
       padding-left: 1rem
     
 
