--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -47,6 +47,17 @@ input, textarea, button, select, a
 body
   background-color: var(--background-color)
 
+::-webkit-scrollbar 
+  width: 10px
+::-webkit-scrollbar-track 
+  background: #f1f1f1
+  border-radius: 5px
+::-webkit-scrollbar-thumb
+  background: #888
+  border-radius: 5px
+::-webkit-scrollbar-thumb:hover 
+  background: #555
+
 a
   text-decoration: none
   color: black
@@ -387,7 +398,7 @@ footer
   left: 50%
   width: 40%
   min-width: 32rem
-  padding: 5rem 2rem 1.5rem 2rem
+  padding: 2rem 2rem 1.5rem 2rem
   background: linear-gradient(180deg,var(--border-color-eventwindow), #FFFFFF)
   border-radius: 3rem
   border: 5px solid var(--border-color-eventwindow)
@@ -402,7 +413,7 @@ footer
     flex-wrap: nowrap
     justify-content: flex-start
     align-items: flex-start
-    width: 90%
+    width: 87%
 
     
     #description
@@ -418,7 +429,7 @@ footer
         flex-direction: row
         flex-wrap: wrap
         align-content: flex-start
-        justify-content: space-between
+        justify-content: flex-start
         align-items: flex-start
         width: 100%
         //margin-left: 9rem
@@ -643,7 +654,6 @@ footer
     align-content: center
     align-items: center
     justify-content: space-between
-    
     width: 7%
     
     #eventoperate
@@ -655,8 +665,8 @@ footer
       justify-content: flex-start
       
       #exitbtn1
-        position: absolute
-        transform: translate(1.1rem, -3.7rem)
+        //position: absolute
+        //transform: translate(1.1rem, -3.7rem)
         width: 1.5rem
         height: 1.5rem
         cursor: pointer
@@ -668,7 +678,8 @@ footer
         margin-bottom: 0.4rem
         border-radius: 50%
         border: solid 0.2rem var(--border-color-eventwindow)
-        
+        flex-start
+        background-color: #FFFFFF
       #bar
         width: 2.5rem
         height: 0.2rem
@@ -684,12 +695,13 @@ footer
         align-items: center
         height: 16rem
         overflow: hidden
+        
         .member
           width: 3rem
           height: 3rem
           margin-bottom: 0.4rem
           border-radius: 50%
-          
+          background-color: #FFFFFF
         .participant
           border: solid 0.2rem var(--border-color-participate)
         .interested
