modify some UI probs

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -248,7 +248,8 @@ footer
       align-items: flex-start
       margin: 0 3rem
       margin-bottom: 7rem
-      
+      a
+        margin: 1rem
       .eventpost:hover
         position: relative
         transform: scale(1.01)
@@ -262,10 +263,10 @@ footer
         justify-content: flex-start
         align-items: center
         cursor: pointer
-                
-        width: 14rem
+               
+        width: 13rem
         background-color: var(--background-color-box)
-        margin: 1rem
+        //margin: 1rem
         padding: 0.5rem 1.5rem 0.5rem 1.5rem
         border-radius: 1.5rem
         box-shadow: 0.15rem 0.1rem 0.3rem 0.2rem rgba(150, 150, 150, 0.7)
@@ -341,8 +342,6 @@ footer
           #commenticon
             height: 1.5rem
             width: auto
-      a
-        margin-left: 0
       #virtualdiv
         height: 0
         width: 18rem
