--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -194,22 +194,22 @@ a
     #notificationboard
       display: none
       margin: 0.5vh 0 0 -1rem
-      padding: 1rem
+      padding: 0.5rem
     
       position: relative
       height: 0vh
       width: 22rem
       top: 0
       right: 8rem
-      background-color: #FAFAFA
+      background-color: #EEE
       //opacity: 0.95
       
-      border-radius: 2rem
+      border-radius: 1.5rem
       border: solid 2px #CCC
       
       #noticeheading
-        font-size: 2.5rem
-        margin: 0.5rem 0 0.5rem 1rem
+        font-size: 1.5rem
+        margin: 0.5vh 0 0.5vh 1vw
     
       #notices
         display: flex
@@ -220,12 +220,13 @@ a
         
         overflow: scroll
         overflow-x: hidden
-        height: 40vh
+        height: 39vh
+        border-radius: 1.5rem
         
         z-index: 0
         
         .notice:hover
-          background: #F0F0F0
+          background-color: #F0F0F0
         
         .notice
           display: flex
@@ -234,16 +235,16 @@ a
           justify-content: flex-start
           align-items: stretch
           background-color: white
-          margin: 0.5rem
-          padding: 0.2rem
+          margin: 0.3rem
+          padding: 0.15rem 0.2rem
           border-radius: 1rem
           
           a
             margin: 0
           
           #noticesenderpic
-            height: 3.5rem
-            width: 3.5rem
+            height: 2.5rem
+            width: 2.5rem
             border-radius: 50%
             background-color: white
         
@@ -265,6 +266,8 @@ a
               align-items: flex-end
               //background-color: purple
               
+              a
+                margin: 0
               p
                 font-size: 1rem
                 color: #333333
@@ -272,10 +275,11 @@ a
                 margin: 0 0.2rem
               
               #noticesendername
-                font-size: 1.2rem
-                font-weight: 600
-              #notice-detail
                 font-size: 1rem
+                font-weight: 500
+              #notice-detail
+                font-size: 0.8rem
+                font-weight: 400
               #noticeevent
                 font-size: 1.2rem
                 font-weight: 600
@@ -288,9 +292,9 @@ a
               
             #notice-rightbottom
               #notice-date
-                font-size: 0.85rem
+                font-size: 0.7rem
                 color: #777777
-                font-weight: 900
+                font-weight: 700
                 //background-color: pink
       
 @media only screen and (max-width: 450px)
