fix homepage event window pic prob

--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -441,12 +441,13 @@ footer
           width: 7.5rem
           z-index: -1
           opacity: 1
-          border-radius: 0.5rem
+          border-radius: 0.7rem
             
           #eventpic
             height: 100%
             width: 100%
-            border-radius: 0.5rem
+            border-radius: 0.7rem
+            background-color: var(--background-color-filiter2)
               
             img
               height: 100%
@@ -456,7 +457,6 @@ footer
               font-size: 1rem
               line-height: 8rem
               text-align: center
-              background-color: var(--background-color-filiter2)
 
         #event-heading 
           display: flex
@@ -471,9 +471,10 @@ footer
             //margin: 0.3rem 0 0 9rem                  
 
         #event-date
-          font-size: 1rem
+          font-size: 0.8rem
           color: var(--fontcolor-hover)
-          margin: 0
+          font-weight: 500
+          margin-top: 0.4rem
       
       #event-detail
         font-size: 1.2rem
