--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -48,15 +48,15 @@ body
   background-color: var(--background-color)
 
 ::-webkit-scrollbar 
-  width: 10px
+  width: 4px
 ::-webkit-scrollbar-track 
-  background: #f1f1f1
+  background: transparent //#f1f1f1
   border-radius: 5px
 ::-webkit-scrollbar-thumb
   background: #888
-  border-radius: 5px
+  border-radius: 2px
 ::-webkit-scrollbar-thumb:hover 
-  background: #555
+  background: #666
 
 a
   text-decoration: none
@@ -252,9 +252,8 @@ footer
         margin: 1rem
       .eventpost:hover
         position: relative
-        transform: scale(1.01)
-        box-shadow: 0.25rem 0.35rem 0.4rem 0.1rem var(--box-shadow-color)
-      
+        transform: scale(1.005)
+        box-shadow: 0.3rem 0.15rem 0.5rem 0.2rem var(--box-shadow-color)
       .eventpost
         display: flex
         flex-direction: column
@@ -269,8 +268,8 @@ footer
         //margin: 1rem
         padding: 0.5rem 1.5rem 0.5rem 1.5rem
         border-radius: 1.5rem
-        box-shadow: 0.15rem 0.1rem 0.3rem 0.2rem rgba(150, 150, 150, 0.7)
-        
+        box-shadow: 0.3rem 0.15rem 0.4rem 0.1rem var(--box-shadow-color)
+
         *
           margin: 0
         p
@@ -395,8 +394,8 @@ footer
   transform: translate(-50%, -50%)
   top: 50%
   left: 50%
-  width: 40%
-  min-width: 32rem
+  width: 41%
+  min-width: 35rem
   padding: 2rem 2rem 1.5rem 2rem
   background: linear-gradient(180deg,var(--border-color-eventwindow), #FFFFFF)
   border-radius: 3rem
@@ -413,6 +412,7 @@ footer
     justify-content: flex-start
     align-items: flex-start
     width: 87%
+    margin-left: 5px
 
     
     #description
@@ -422,16 +422,17 @@ footer
       align-content: flex-start
       justify-content: flex-start
       align-items: flex-start
+      width: 98%
     
       #description-top
         display: flex
         flex-direction: row
         flex-wrap: wrap
         align-content: flex-start
-        justify-content: flex-start
+        justify-content: space-between
         align-items: flex-start
         width: 100%
-        //margin-left: 9rem
+        margin-left: 0.5rem
 
         #eventwindow-bg
           //position: absolute
@@ -461,7 +462,8 @@ footer
         #event-heading 
           display: flex
           flex-direction: column
-          width: 60%
+          width: calc(10 * 1.8rem)
+          margin-left: 0.7rem
           #event-title
             font-size: 1.8rem
             //width: 50rem
@@ -474,15 +476,15 @@ footer
           font-size: 0.8rem
           color: var(--fontcolor-hover)
           font-weight: 500
-          margin-top: 0.4rem
+          margin-top: 0.7rem
       
       #event-detail
         font-size: 1.2rem
         line-height: 1.5rem
         min-height: 5rem
         max-height: 12rem
-        margin: 2.2rem 0 0 1rem
-        width: 98%
+        margin: 1rem 0 0 0.5rem
+        min-width: 98%
         overflow: scroll
         overflow-x: hidden        
     
@@ -501,7 +503,7 @@ footer
       background-color: var(--background-color-filiter2)
       border-radius: 1.5rem
       padding: 0.5rem
-      margin: 0.5rem 0 0 0.5rem
+      margin: 0.5rem 0 0 0
       
       #msgtitle
         //position: absolute
@@ -528,7 +530,7 @@ footer
           flex-direction: row
           flex-wrap: nowrap
           align-items: center
-          width: 100%
+          width: 95%
           margin: 0 0 0.4rem 0
           border-radius: 0.5rem
           background-color: var(--background-color-filiter2)
@@ -549,7 +551,7 @@ footer
             flex-wrap: nowrap
             justify-content: space-between
             align-items: flex-start
-            width: 85%
+            width: 93%
             min-height: 2.5rem
             margin-left: 1rem
             
@@ -608,7 +610,7 @@ footer
         align-content: center
         align-items: center
         justify-content: flex-start
-        margin: 1rem
+        margin: 1.2rem 0.7rem 0.3rem 0
         height: 1.5rem
         
         .eventmsg-insert
@@ -617,19 +619,18 @@ footer
           width: 60%
           border-radius: 1rem 0 0 1rem
           background-color: #F2F2F2
-          padding: 0.5rem 1.3rem 0.5rem 1rem
-          font-size: 1.1pyrem
+          padding: 0.4rem 1.3rem 0.4rem 1rem
+          font-size: 1.1rem
         
         .eventmsg-btn
           //position: absolute
           //right: 0
-          //transform: translateX(3.5rem)
+          transform: translateX(-1.5rem)
           outline: none
           border: none
           border-radius: 3rem
           background-color: #75E1C7
           padding: 0.5rem 1rem
-          margin: 0 0 0 0.5rem
           font-size: 1rem
           cursor: pointer
 
@@ -699,13 +700,13 @@ footer
         .member
           width: 3rem
           height: 3rem
-          margin-bottom: 0.4rem
+          margin-bottom: 0.2rem
           border-radius: 50%
           background-color: #FFFFFF
         .participant
-          border: solid 0.2rem var(--border-color-participate)
+          border: solid 0.15rem var(--border-color-participate)
         .interested
-          border: solid 0.2rem var(--background-color-filiter)
+          border: solid 0.15rem var(--background-color-filiter)
           
         
       .login-redirect
@@ -716,7 +717,7 @@ footer
           
       #likebutton
         position: absolute
-        bottom: 5%
+        bottom: 3%
         //background-image: url('../file/like-bg-n.png')
         background-repeat: no-repeat
         background-size: contain
@@ -735,8 +736,8 @@ footer
         button
           background: Transparent
           border: none
-          height: 4rem
-          width: 4rem
+          height: 100%
+          width: 100%
           cursor: pointer
       
         #like-y
@@ -811,7 +812,7 @@ footer
   padding: 3% 0
   background-color: var(--background-color-create)
   border-radius: 3rem
-  border: 5px solid var(--border-color-create)
+  border: 0.2rem solid var(--border-color-create)
   box-shadow: 10px 10px 25px 5px var(--box-shadow-color)
   opacity: 0
   z-index: 7
@@ -963,9 +964,9 @@ footer
       font-size: 1.5rem
       background-color: var(--background-color-buttons)
       border-radius: 2rem
-      padding: 0.5rem 0rem
+      padding: 0.2rem 0rem
       text-align: center
-      margin-top: 2rem
+      margin-top: 2.5rem
       border: solid 2px var(--background-color-buttons)
     #submit-btn:hover
       background-color: var(--background-color-buttons-hover)
